K8S/grpcpublisher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcpublisher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcpublisherservice
  template:
    metadata:
      labels:
        app: grpcpublisherservice
    spec:
      containers:
        - name: grpcpublisherservice
          image: dogruyolomerfurkan/grpcpublisherservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: grpcpublisher-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: grpcpublisherservice
  ports:
  - name: grpcpublisherservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: publishergrpc
    protocol: TCP
    port: 666
    targetPort: 666
