K8S/grpcpublisher-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcpublisher-nodeport-service
spec:
  type: NodePort
  selector:
    app: grpcpublisherservice
  ports:
    - name: grpcpublisherservice
      protocol: TCP
      port: 80
      targetPort: 80
