K8S/grpcsubscriber-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcsubscriber-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcsubscriberservice
  template:
    metadata:
      labels:
        app: grpcsubscriberservice
    spec:
      containers:
        - name: grpcsubscriberservice
          image: dogruyolomerfurkan/grpcsubscriberservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: grpcsubscriber-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: grpcsubscriberservice
  ports:
  - name: grpcsubscriberservice
    protocol: TCP
    port: 80
    targetPort: 80
